<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/title_iface">
        <ListPreference
            app:key="preferred_locale"
            app:defaultValue=""
            app:title="@string/menu_language"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="preferred_nightmode"
            app:defaultValue="AUTO"
            app:entries="@array/daynight_themes"
            app:entryValues="@array/daynight_values"
            app:title="@string/setting_daynight"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="preferred_theme"
            app:defaultValue="Classic"
            app:entries="@array/themes"
            app:entryValues="@array/themes_values"
            app:title="@string/setting_theme"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="preferred_lock"
            app:defaultValue="false"
            android:title="@string/setting_lock" />
        <SwitchPreference
            app:key="preferred_stickyfiat"
            app:defaultValue="false"
            android:title="@string/setting_stickyfiat"
            android:summary="@string/setting_stickyfiat_summary" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/title_info">
        <Preference
            app:key="credits_info"
            app:title="@string/label_credits" />
        <Preference
            app:key="privacy_info"
            app:title="@string/menu_privacy" />
        <Preference
            app:key="about_info"
            app:title="@string/menu_about" />
    </PreferenceCategory>
</PreferenceScreen>
